# MaaS_AI_Assistant

./: .gitignore  README.md  integrate_model_plan.txt  jup_nb.txt  timetable_data.csv
Agents/journey_planner/: GAT_journey_planner.ipynb  station_features.csv
Agents/journey_planner/data/: pune_maas_journey_planner_data.csv
Main_App/: chatbot_agent.py  chatbot_nb.ipynb  chatbot_requirements.txt
Main_App/data_bases/: aqua_line_timetable.csv  pink_line_timetable.csv  purple_line_timetable.csv  swipe_metadata.csv
Main_App/dependencies/: requirements.txt
Main_App/llm/: chatbot_agent.py
Ref/: PMAAS data v.3.xlsx  PMAAS_data.xlsx  aqua_line_path.txt  pink_line_path.txt  pune_maas_ai_project_plan.pptx  purple_line_path.txt  station_transfer_list.csv
Ref/Chandrama/: agent_core.py  ingest.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
