[project]
name = "pmaas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-ollama>=1.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
]
